--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 	</parent>
 
 	<groupId>io.jenkins.plugins</groupId>
-	<artifactId>ArchiveFilesSCM</artifactId>
-	<name>Jenkins Archive Files SCM</name>
-	<version>2.1.3</version>
+	<artifactId>ArtifactorySCM</artifactId>
+	<name>Jenkins Artifactory SCM</name>
+	<version>1.0.0</version>
 	<packaging>hpi</packaging>
 
 	<properties>
@@ -25,13 +25,13 @@
      -->
 	</properties>
 
-	<description>ArchiveFilesSCM</description>
-	<url>https://wiki.jenkins-ci.org/display/JENKINS/archive-files-scm-plugin</url>
+	<description>ArtifactorySCM</description>
+	<url>https://wiki.jenkins-ci.org/display/JENKINS/artifactory-scm-plugin</url>
 
 	<scm>
-		<connection>scm:git:ssh://github.com/jenkinsci/archive-files-scm-plugin.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/archive-files-scm-plugin.git</developerConnection>
-		<url>https://github.com/jenkinsci/archive-files-scm-plugin</url>
+		<connection>scm:git:ssh://github.com/jenkinsci/artifactory-scm-plugin.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/artifactory-scm-plugin.git</developerConnection>
+		<url>https://github.com/jenkinsci/artifactory-scm-plugin</url>
 	</scm>
 
 	<developers>
