--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,11 @@
       <artifactId>bouncycastle-api</artifactId>
       <version>2.29</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.0</version>
+    </dependency>
   </dependencies>
 
 
